tests/transpiler/x/fortran/query_sum_select.error
error[I008]: cannot apply operator '>' to types null and null
  --> /workspace/mochi/tests/vm/valid/query_sum_select.mochi:2:37

  2 | let result = from n in nums where n > 1 select sum(n)
    |                                     ^

help:
  Use compatible types for the operator.